--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -637,21 +637,9 @@ video {
   }
 }
 
-@media (min-width: 1680px) {
+@media (min-width: 1536px) {
   .container {
-    max-width: 1680px;
-  }
-}
-
-@media (min-width: 1920px) {
-  .container {
-    max-width: 1920px;
-  }
-}
-
-@media (min-width: 3840px) {
-  .container {
-    max-width: 3840px;
+    max-width: 1536px;
   }
 }
 
@@ -725,10 +713,6 @@ video {
   display: none;
 }
 
-.h-screen {
-  height: 100vh;
-}
-
 .h-9 {
   height: 2.25rem;
 }
@@ -753,36 +737,8 @@ video {
   height: 1px;
 }
 
-.h-\[2\%\] {
-  height: 2%;
-}
-
-.h-\[1\.25vw\] {
-  height: 1.25vw;
-}
-
-.h-\[1\.3vw\] {
-  height: 1.3vw;
-}
-
-.h-\[2\.25vw\] {
-  height: 2.25vw;
-}
-
-.h-\[2vw\] {
-  height: 2vw;
-}
-
-.h-\[2\.3vw\] {
-  height: 2.3vw;
-}
-
-.h-\[2\.5vw\] {
-  height: 2.5vw;
-}
-
-.h-\[2\.2vw\] {
-  height: 2.2vw;
+.h-screen {
+  height: 100vh;
 }
 
 .max-h-\[17rem\] {
@@ -809,36 +765,8 @@ video {
   width: 27.5rem;
 }
 
-.w-\[20\%\] {
-  width: 20%;
-}
-
-.w-\[70\%\] {
-  width: 70%;
-}
-
-.w-\[100\%\] {
-  width: 100%;
-}
-
-.w-\[1\.25vw\] {
-  width: 1.25vw;
-}
-
-.w-\[1\.3vw\] {
-  width: 1.3vw;
-}
-
-.w-\[2\.25vw\] {
-  width: 2.25vw;
-}
-
-.w-\[2\.3vw\] {
-  width: 2.3vw;
-}
-
-.w-\[2\.4vw\] {
-  width: 2.4vw;
+.w-10 {
+  width: 2.5rem;
 }
 
 .max-w-full {
@@ -857,37 +785,8 @@ video {
   max-width: 32rem;
 }
 
-.max-w-2xl {
-  max-width: 42rem;
-}
-
-.max-w-\[2\%\] {
-  max-width: 2%;
-}
-
-.max-w-\[10\%\] {
-  max-width: 10%;
-}
-
-.max-w-\[50\%\] {
-  max-width: 50%;
-}
-
-.max-w-\[90\%\] {
-  max-width: 90%;
-}
-
-.max-w-\[100\%\] {
-  max-width: 100%;
-}
-
 .-translate-y-2\/4 {
   --tw-translate-y: -50%;
-  transform: var(--tw-transform);
-}
-
-.rotate-180 {
-  --tw-rotate: 180deg;
   transform: var(--tw-transform);
 }
 
@@ -993,96 +892,6 @@ video {
   margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
 }
 
-.space-x-\[\] > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc( * var(--tw-space-x-reverse));
-  margin-left: calc( * calc(1 - var(--tw-space-x-reverse)));
-}
-
-.space-x-\[1vw\] > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(1vw * var(--tw-space-x-reverse));
-  margin-left: calc(1vw * calc(1 - var(--tw-space-x-reverse)));
-}
-
-.space-x-\[3vw\] > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(3vw * var(--tw-space-x-reverse));
-  margin-left: calc(3vw * calc(1 - var(--tw-space-x-reverse)));
-}
-
-.space-x-\[5vw\] > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(5vw * var(--tw-space-x-reverse));
-  margin-left: calc(5vw * calc(1 - var(--tw-space-x-reverse)));
-}
-
-.space-x-\[4vw\] > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(4vw * var(--tw-space-x-reverse));
-  margin-left: calc(4vw * calc(1 - var(--tw-space-x-reverse)));
-}
-
-.space-x-\[3\.5vw\] > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(3.5vw * var(--tw-space-x-reverse));
-  margin-left: calc(3.5vw * calc(1 - var(--tw-space-x-reverse)));
-}
-
-.space-x-\[2\.8vw\] > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(2.8vw * var(--tw-space-x-reverse));
-  margin-left: calc(2.8vw * calc(1 - var(--tw-space-x-reverse)));
-}
-
-.space-x-\[2\.5vw\] > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(2.5vw * var(--tw-space-x-reverse));
-  margin-left: calc(2.5vw * calc(1 - var(--tw-space-x-reverse)));
-}
-
-.space-x-\[2\.6vw\] > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(2.6vw * var(--tw-space-x-reverse));
-  margin-left: calc(2.6vw * calc(1 - var(--tw-space-x-reverse)));
-}
-
-.space-x-\[2\.7vw\] > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(2.7vw * var(--tw-space-x-reverse));
-  margin-left: calc(2.7vw * calc(1 - var(--tw-space-x-reverse)));
-}
-
-.space-x-\[1\.5vw\] > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(1.5vw * var(--tw-space-x-reverse));
-  margin-left: calc(1.5vw * calc(1 - var(--tw-space-x-reverse)));
-}
-
-.space-x-\[1\.3vw\] > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(1.3vw * var(--tw-space-x-reverse));
-  margin-left: calc(1.3vw * calc(1 - var(--tw-space-x-reverse)));
-}
-
-.space-x-\[1\.4vw\] > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(1.4vw * var(--tw-space-x-reverse));
-  margin-left: calc(1.4vw * calc(1 - var(--tw-space-x-reverse)));
-}
-
-.space-y-\[1vw\] > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(1vw * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(1vw * var(--tw-space-y-reverse));
-}
-
-.space-y-\[2vw\] > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(2vw * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(2vw * var(--tw-space-y-reverse));
-}
-
 .overflow-hidden {
   overflow: hidden;
 }
@@ -1099,34 +908,6 @@ video {
   border-radius: 0.25rem;
 }
 
-.rounded-\[1vw\] {
-  border-radius: 1vw;
-}
-
-.rounded-\[0\.2vw\] {
-  border-radius: 0.2vw;
-}
-
-.rounded-\[0\.5vw\] {
-  border-radius: 0.5vw;
-}
-
-.rounded-\[0\.6vw\] {
-  border-radius: 0.6vw;
-}
-
-.rounded-\[8px\] {
-  border-radius: 8px;
-}
-
-.rounded-\[0\.375vw\] {
-  border-radius: 0.375vw;
-}
-
-.rounded-\[0\.4vw\] {
-  border-radius: 0.4vw;
-}
-
 .border {
   border-width: 1px;
 }
@@ -1135,44 +916,8 @@ video {
   border-width: 2px;
 }
 
-.border-\[0\.1vw\] {
-  border-width: 0.1vw;
-}
-
-.border-\[0\.2vw\] {
-  border-width: 0.2vw;
-}
-
-.border-\[0\.15vw\] {
-  border-width: 0.15vw;
-}
-
-.border-\[0\.11vw\] {
-  border-width: 0.11vw;
-}
-
-.border-\[0\.12vw\] {
-  border-width: 0.12vw;
-}
-
 .border-b-2 {
   border-bottom-width: 2px;
-}
-
-.border-b-\[1vw\] {
-  border-bottom-width: 1vw;
-}
-
-.border-b-\[0\.1vw\] {
-  border-bottom-width: 0.1vw;
-}
-
-.border-b-\[0\.2vw\] {
-  border-bottom-width: 0.2vw;
-}
-
-.border-b-\[0\.3vw\] {
-  border-bottom-width: 0.3vw;
 }
 
 .border-none {
@@ -1219,9 +964,19 @@ video {
   background-color: rgba(245, 158, 11, var(--tw-bg-opacity));
 }
 
+.bg-green-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgba(16, 185, 129, var(--tw-bg-opacity));
+}
+
 .bg-gray-300 {
   --tw-bg-opacity: 1;
   background-color: rgba(209, 213, 219, var(--tw-bg-opacity));
+}
+
+.bg-gray-900 {
+  --tw-bg-opacity: 1;
+  background-color: rgba(17, 24, 39, var(--tw-bg-opacity));
 }
 
 .bg-gradient-to-b {
@@ -1290,126 +1045,6 @@ video {
   padding-right: 1rem;
 }
 
-.px-10 {
-  padding-left: 2.5rem;
-  padding-right: 2.5rem;
-}
-
-.px-\[10\%\] {
-  padding-left: 10%;
-  padding-right: 10%;
-}
-
-.px-\[8\%\] {
-  padding-left: 8%;
-  padding-right: 8%;
-}
-
-.py-\[2\%\] {
-  padding-top: 2%;
-  padding-bottom: 2%;
-}
-
-.py-\[10\%\] {
-  padding-top: 10%;
-  padding-bottom: 10%;
-}
-
-.py-\[5\%\] {
-  padding-top: 5%;
-  padding-bottom: 5%;
-}
-
-.py-\[3\%\] {
-  padding-top: 3%;
-  padding-bottom: 3%;
-}
-
-.px-\[0\.75em\] {
-  padding-left: 0.75em;
-  padding-right: 0.75em;
-}
-
-.py-\[0\.25em\] {
-  padding-top: 0.25em;
-  padding-bottom: 0.25em;
-}
-
-.px-\[0\.75vw\] {
-  padding-left: 0.75vw;
-  padding-right: 0.75vw;
-}
-
-.py-\[0\.25vw\] {
-  padding-top: 0.25vw;
-  padding-bottom: 0.25vw;
-}
-
-.px-\[0\.9vw\] {
-  padding-left: 0.9vw;
-  padding-right: 0.9vw;
-}
-
-.px-\[1vw\] {
-  padding-left: 1vw;
-  padding-right: 1vw;
-}
-
-.px-\[1\.5vw\] {
-  padding-left: 1.5vw;
-  padding-right: 1.5vw;
-}
-
-.py-\[0\.4vw\] {
-  padding-top: 0.4vw;
-  padding-bottom: 0.4vw;
-}
-
-.py-\[0\.3vw\] {
-  padding-top: 0.3vw;
-  padding-bottom: 0.3vw;
-}
-
-.px-\[180px\] {
-  padding-left: 180px;
-  padding-right: 180px;
-}
-
-.px-\[1\.1vw\] {
-  padding-left: 1.1vw;
-  padding-right: 1.1vw;
-}
-
-.px-\[1\.125vw\] {
-  padding-left: 1.125vw;
-  padding-right: 1.125vw;
-}
-
-.px-\[1\.13vw\] {
-  padding-left: 1.13vw;
-  padding-right: 1.13vw;
-}
-
-.px-\[1\.14vw\] {
-  padding-left: 1.14vw;
-  padding-right: 1.14vw;
-}
-
-.px-\[1\.2vw\] {
-  padding-left: 1.2vw;
-  padding-right: 1.2vw;
-}
-
-.px-\[0vw\] {
-  padding-left: 0vw;
-  padding-right: 0vw;
-}
-
-.px-\[0\.8vw\] {
-  padding-left: 0.8vw;
-  padding-right: 0.8vw;
-}
-
 .pl-2 {
   padding-left: 0.5rem;
 }
@@ -1474,66 +1109,6 @@ video {
   padding-bottom: 1rem;
 }
 
-.pl-20 {
-  padding-left: 5rem;
-}
-
-.pl-10 {
-  padding-left: 2.5rem;
-}
-
-.pr-20 {
-  padding-right: 5rem;
-}
-
-.pr-16 {
-  padding-right: 4rem;
-}
-
-.pl-8 {
-  padding-left: 2rem;
-}
-
-.pl-7 {
-  padding-left: 1.75rem;
-}
-
-.pt-10 {
-  padding-top: 2.5rem;
-}
-
-.pl-\[0\.1vw\] {
-  padding-left: 0.1vw;
-}
-
-.pl-\[0\.2vw\] {
-  padding-left: 0.2vw;
-}
-
-.pl-\[0\.8vw\] {
-  padding-left: 0.8vw;
-}
-
-.pl-\[0\.5vw\] {
-  padding-left: 0.5vw;
-}
-
-.pl-\[0\.6vw\] {
-  padding-left: 0.6vw;
-}
-
-.pl-\[8\.6px\] {
-  padding-left: 8.6px;
-}
-
-.pb-\[0\.75vw\] {
-  padding-bottom: 0.75vw;
-}
-
-.pt-\[1\.5vw\] {
-  padding-top: 1.5vw;
-}
-
 .text-center {
   text-align: center;
 }
@@ -1568,50 +1143,6 @@ video {
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
-}
-
-.text-\[10px\] {
-  font-size: 10px;
-}
-
-.text-\[10\%\] {
-  font-size: 10%;
-}
-
-.text-\[50\%\] {
-  font-size: 50%;
-}
-
-.text-\[100\%\] {
-  font-size: 100%;
-}
-
-.text-\[2vw\] {
-  font-size: 2vw;
-}
-
-.text-\[1vw\] {
-  font-size: 1vw;
-}
-
-.text-\[1\.5vw\] {
-  font-size: 1.5vw;
-}
-
-.text-\[1\.2vw\] {
-  font-size: 1.2vw;
-}
-
-.text-\[1\.1vw\] {
-  font-size: 1.1vw;
-}
-
-.text-\[1\.15vw\] {
-  font-size: 1.15vw;
-}
-
-.text-\[1\.18vw\] {
-  font-size: 1.18vw;
 }
 
 .font-extrabold {
@@ -1739,10 +1270,6 @@ video {
 
 .duration-500 {
   transition-duration: 500ms;
-}
-
-.duration-1000 {
-  transition-duration: 1000ms;
 }
 
 .ease-in-out {
@@ -1989,10 +1516,6 @@ video {
     padding-left: 0.5rem;
   }
 
-  .md\:pl-10 {
-    padding-left: 2.5rem;
-  }
-
   .md\:text-left {
     text-align: left;
   }
@@ -2042,54 +1565,6 @@ video {
     margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
   }
 
-  .lg\:space-x-20 > :not([hidden]) ~ :not([hidden]) {
-    --tw-space-x-reverse: 0;
-    margin-right: calc(5rem * var(--tw-space-x-reverse));
-    margin-left: calc(5rem * calc(1 - var(--tw-space-x-reverse)));
-  }
-
-  .lg\:space-x-\[40\%\] > :not([hidden]) ~ :not([hidden]) {
-    --tw-space-x-reverse: 0;
-    margin-right: calc(40% * var(--tw-space-x-reverse));
-    margin-left: calc(40% * calc(1 - var(--tw-space-x-reverse)));
-  }
-
-  .lg\:space-x-\[20\%\] > :not([hidden]) ~ :not([hidden]) {
-    --tw-space-x-reverse: 0;
-    margin-right: calc(20% * var(--tw-space-x-reverse));
-    margin-left: calc(20% * calc(1 - var(--tw-space-x-reverse)));
-  }
-
-  .lg\:space-x-\[18\%\] > :not([hidden]) ~ :not([hidden]) {
-    --tw-space-x-reverse: 0;
-    margin-right: calc(18% * var(--tw-space-x-reverse));
-    margin-left: calc(18% * calc(1 - var(--tw-space-x-reverse)));
-  }
-
-  .lg\:space-x-\[15\%\] > :not([hidden]) ~ :not([hidden]) {
-    --tw-space-x-reverse: 0;
-    margin-right: calc(15% * var(--tw-space-x-reverse));
-    margin-left: calc(15% * calc(1 - var(--tw-space-x-reverse)));
-  }
-
-  .lg\:space-x-\[10\%\] > :not([hidden]) ~ :not([hidden]) {
-    --tw-space-x-reverse: 0;
-    margin-right: calc(10% * var(--tw-space-x-reverse));
-    margin-left: calc(10% * calc(1 - var(--tw-space-x-reverse)));
-  }
-
-  .lg\:space-x-\[13\%\] > :not([hidden]) ~ :not([hidden]) {
-    --tw-space-x-reverse: 0;
-    margin-right: calc(13% * var(--tw-space-x-reverse));
-    margin-left: calc(13% * calc(1 - var(--tw-space-x-reverse)));
-  }
-
-  .lg\:space-x-\[12\%\] > :not([hidden]) ~ :not([hidden]) {
-    --tw-space-x-reverse: 0;
-    margin-right: calc(12% * var(--tw-space-x-reverse));
-    margin-left: calc(12% * calc(1 - var(--tw-space-x-reverse)));
-  }
-
   .lg\:py-1 {
     padding-top: 0.25rem;
     padding-bottom: 0.25rem;
@@ -2117,288 +1592,7 @@ video {
     display: none;
   }
 
-  .xl\:h-\[2vw\] {
-    height: 2vw;
-  }
-
-  .xl\:h-\[1vw\] {
-    height: 1vw;
-  }
-
-  .xl\:h-\[4vw\] {
-    height: 4vw;
-  }
-
-  .xl\:h-\[3vw\] {
-    height: 3vw;
-  }
-
-  .xl\:h-\[2\.5vw\] {
-    height: 2.5vw;
-  }
-
-  .xl\:rounded-\[8px\] {
-    border-radius: 8px;
-  }
-
-  .xl\:rounded-\[0\.6vw\] {
-    border-radius: 0.6vw;
-  }
-
-  .xl\:py-\[0\.1vw\] {
-    padding-top: 0.1vw;
-    padding-bottom: 0.1vw;
-  }
-
-  .xl\:py-\[1vw\] {
-    padding-top: 1vw;
-    padding-bottom: 1vw;
-  }
-
-  .xl\:py-\[0\.6vw\] {
-    padding-top: 0.6vw;
-    padding-bottom: 0.6vw;
-  }
-
-  .xl\:px-\[1\.5vw\] {
-    padding-left: 1.5vw;
-    padding-right: 1.5vw;
-  }
-
-  .xl\:px-\[3vw\] {
-    padding-left: 3vw;
-    padding-right: 3vw;
-  }
-
-  .xl\:py-\[0\.3vw\] {
-    padding-top: 0.3vw;
-    padding-bottom: 0.3vw;
-  }
-
-  .xl\:py-\[0\.25vw\] {
-    padding-top: 0.25vw;
-    padding-bottom: 0.25vw;
-  }
-
   .xl\:pl-10 {
     padding-left: 2.5rem;
-  }
-
-  .xl\:pl-\[0\.6vw\] {
-    padding-left: 0.6vw;
-  }
-
-  .xl\:text-\[2vw\] {
-    font-size: 2vw;
-  }
-
-  .xl\:text-\[1\.5vw\] {
-    font-size: 1.5vw;
-  }
-
-  .xl\:text-\[1\.7vw\] {
-    font-size: 1.7vw;
-  }
-
-  .xl\:text-\[1\.9vw\] {
-    font-size: 1.9vw;
-  }
-
-  .xl\:text-\[1\.8vw\] {
-    font-size: 1.8vw;
-  }
-}
-
-@media (min-width: 1680px) {
-  .\32xl\:max-w-md {
-    max-width: 28rem;
-  }
-
-  .\32xl\:space-x-\[15\%\] > :not([hidden]) ~ :not([hidden]) {
-    --tw-space-x-reverse: 0;
-    margin-right: calc(15% * var(--tw-space-x-reverse));
-    margin-left: calc(15% * calc(1 - var(--tw-space-x-reverse)));
-  }
-
-  .\32xl\:space-x-\[20\%\] > :not([hidden]) ~ :not([hidden]) {
-    --tw-space-x-reverse: 0;
-    margin-right: calc(20% * var(--tw-space-x-reverse));
-    margin-left: calc(20% * calc(1 - var(--tw-space-x-reverse)));
-  }
-
-  .\32xl\:space-x-\[100\%\] > :not([hidden]) ~ :not([hidden]) {
-    --tw-space-x-reverse: 0;
-    margin-right: calc(100% * var(--tw-space-x-reverse));
-    margin-left: calc(100% * calc(1 - var(--tw-space-x-reverse)));
-  }
-}
-
-@media (min-width: 1920px) {
-  .FHD\:h-10 {
-    height: 2.5rem;
-  }
-
-  .FHD\:h-12 {
-    height: 3rem;
-  }
-
-  .FHD\:h-\[12em\] {
-    height: 12em;
-  }
-
-  .FHD\:h-\[5em\] {
-    height: 5em;
-  }
-
-  .FHD\:h-\[2em\] {
-    height: 2em;
-  }
-
-  .FHD\:h-\[3em\] {
-    height: 3em;
-  }
-
-  .FHD\:h-\[2vw\] {
-    height: 2vw;
-  }
-
-  .FHD\:h-\[20\%\] {
-    height: 20%;
-  }
-
-  .FHD\:h-\[2\%\] {
-    height: 2%;
-  }
-
-  .FHD\:max-w-lg {
-    max-width: 32rem;
-  }
-
-  .FHD\:text-3xl {
-    font-size: 1.875rem;
-    line-height: 2.25rem;
-  }
-
-  .FHD\:text-4xl {
-    font-size: 2.25rem;
-    line-height: 2.5rem;
-  }
-
-  .FHD\:text-2xl {
-    font-size: 1.5rem;
-    line-height: 2rem;
-  }
-
-  .FHD\:text-xl {
-    font-size: 1.25rem;
-    line-height: 1.75rem;
-  }
-}
-
-@media (min-width: 3840px) {
-  .\34K\:my-40 {
-    margin-top: 10rem;
-    margin-bottom: 10rem;
-  }
-
-  .\34K\:h-16 {
-    height: 4rem;
-  }
-
-  .\34K\:h-24 {
-    height: 6rem;
-  }
-
-  .\34K\:h-20 {
-    height: 5rem;
-  }
-
-  .\34K\:h-\[1vw\] {
-    height: 1vw;
-  }
-
-  .\34K\:h-\[2vw\] {
-    height: 2vw;
-  }
-
-  .\34K\:max-w-lg {
-    max-width: 32rem;
-  }
-
-  .\34K\:max-w-xl {
-    max-width: 36rem;
-  }
-
-  .\34K\:max-w-4xl {
-    max-width: 56rem;
-  }
-
-  .\34K\:py-40 {
-    padding-top: 10rem;
-    padding-bottom: 10rem;
-  }
-
-  .\34K\:py-10 {
-    padding-top: 2.5rem;
-    padding-bottom: 2.5rem;
-  }
-
-  .\34K\:py-px {
-    padding-top: 1px;
-    padding-bottom: 1px;
-  }
-
-  .\34K\:py-2 {
-    padding-top: 0.5rem;
-    padding-bottom: 0.5rem;
-  }
-
-  .\34K\:py-20 {
-    padding-top: 5rem;
-    padding-bottom: 5rem;
-  }
-
-  .\34K\:py-6 {
-    padding-top: 1.5rem;
-    padding-bottom: 1.5rem;
-  }
-
-  .\34K\:py-8 {
-    padding-top: 2rem;
-    padding-bottom: 2rem;
-  }
-
-  .\34K\:py-9 {
-    padding-top: 2.25rem;
-    padding-bottom: 2.25rem;
-  }
-
-  .\34K\:px-6 {
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
-  }
-
-  .\34K\:pt-10 {
-    padding-top: 2.5rem;
-  }
-
-  .\34K\:text-8xl {
-    font-size: 6rem;
-    line-height: 1;
-  }
-
-  .\34K\:text-4xl {
-    font-size: 2.25rem;
-    line-height: 2.5rem;
-  }
-
-  .\34K\:text-5xl {
-    font-size: 3rem;
-    line-height: 1;
-  }
-
-  .\34K\:text-3xl {
-    font-size: 1.875rem;
-    line-height: 2.25rem;
   }
 }
