--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -733,16 +733,12 @@ video {
   height: 1.75rem;
 }
 
-.h-12 {
-  height: 3rem;
+.h-11 {
+  height: 2.75rem;
 }
 
 .h-px {
   height: 1px;
-}
-
-.h-11 {
-  height: 2.75rem;
 }
 
 .max-h-\[17rem\] {
@@ -1093,6 +1089,18 @@ video {
 
 .pb-4 {
   padding-bottom: 1rem;
+}
+
+.pt-10 {
+  padding-top: 2.5rem;
+}
+
+.pt-2 {
+  padding-top: 0.5rem;
+}
+
+.pt-px {
+  padding-top: 1px;
 }
 
 .text-center {
@@ -1483,25 +1491,12 @@ video {
 }
 
 @media (min-width: 768px) {
-  .md\:my-\[1\.6vw\] {
-    margin-top: 1.6vw;
-    margin-bottom: 1.6vw;
-  }
-
   .md\:block {
     display: block;
   }
 
-  .md\:h-\[3vw\] {
-    height: 3vw;
-  }
-
   .md\:max-w-sm {
     max-width: 24rem;
-  }
-
-  .md\:max-w-\[37vw\] {
-    max-width: 37vw;
   }
 
   .md\:flex-row {
@@ -1512,27 +1507,12 @@ video {
     align-items: flex-end;
   }
 
-  .md\:space-x-\[1\.5vw\] > :not([hidden]) ~ :not([hidden]) {
-    --tw-space-x-reverse: 0;
-    margin-right: calc(1.5vw * var(--tw-space-x-reverse));
-    margin-left: calc(1.5vw * calc(1 - var(--tw-space-x-reverse)));
-  }
-
-  .md\:py-\[0\.5vw\] {
-    padding-top: 0.5vw;
-    padding-bottom: 0.5vw;
-  }
-
   .md\:pl-1 {
     padding-left: 0.25rem;
   }
 
   .md\:pt-0 {
     padding-top: 0px;
-  }
-
-  .md\:pt-\[2vw\] {
-    padding-top: 2vw;
   }
 
   .md\:pl-\[5\.1\%\] {
@@ -1543,20 +1523,8 @@ video {
     padding-right: 5%;
   }
 
-  .md\:pb-\[1\.1vw\] {
-    padding-bottom: 1.1vw;
-  }
-
   .md\:pb-\[0\] {
     padding-bottom: 0;
-  }
-
-  .md\:pt-\[0\.4vw\] {
-    padding-top: 0.4vw;
-  }
-
-  .md\:pb-\[1\.2vw\] {
-    padding-bottom: 1.2vw;
   }
 
   .md\:text-left {
@@ -1566,26 +1534,6 @@ video {
   .md\:text-xl {
     font-size: 1.25rem;
     line-height: 1.75rem;
-  }
-
-  .md\:text-\[1\.6vw\] {
-    font-size: 1.6vw;
-  }
-
-  .md\:text-\[1\.1vw\] {
-    font-size: 1.1vw;
-  }
-
-  .md\:text-\[1\.4vw\] {
-    font-size: 1.4vw;
-  }
-
-  .md\:text-\[0\.9vw\] {
-    font-size: 0.9vw;
-  }
-
-  .md\:leading-\[1\.6vw\] {
-    line-height: 1.6vw;
   }
 }
 
