--- a/public/faq/css/styles.css
+++ b/public/faq/css/styles.css
@@ -1904,6 +1904,11 @@ video {
   color: rgba(254, 243, 199, var(--tw-text-opacity));
 }
 
+.dark .dark\:shadow {
+  --tw-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .dark .dark\:hover\:border-gold-light:hover {
   --tw-border-opacity: 1;
   border-color: rgba(255, 215, 0, var(--tw-border-opacity));
