--- a/public/faq/css/styles.css
+++ b/public/faq/css/styles.css
@@ -749,6 +749,14 @@ video {
   max-height: 17rem;
 }
 
+.max-h-56 {
+  max-height: 14rem;
+}
+
+.max-h-10 {
+  max-height: 2.5rem;
+}
+
 .min-h-\[4rem\] {
   min-height: 4rem;
 }
@@ -777,12 +785,52 @@ video {
   width: 90%;
 }
 
-.w-\[68rem\] {
-  width: 68rem;
+.w-\[10rem\] {
+  width: 10rem;
 }
 
 .w-\[55rem\] {
   width: 55rem;
+}
+
+.w-\[100\%\] {
+  width: 100%;
+}
+
+.w-\[40\%\] {
+  width: 40%;
+}
+
+.w-\[30\%\] {
+  width: 30%;
+}
+
+.w-\[20\%\] {
+  width: 20%;
+}
+
+.w-\[25\%\] {
+  width: 25%;
+}
+
+.w-10 {
+  width: 2.5rem;
+}
+
+.w-\[70\%\] {
+  width: 70%;
+}
+
+.w-\[50\%\] {
+  width: 50%;
+}
+
+.w-\[80\%\] {
+  width: 80%;
+}
+
+.w-\[75\%\] {
+  width: 75%;
 }
 
 .max-w-full {
@@ -799,6 +847,10 @@ video {
 
 .max-w-\[61rem\] {
   max-width: 61rem;
+}
+
+.max-w-\[10\%\] {
+  max-width: 10%;
 }
 
 .-translate-y-2\/4 {
@@ -1093,6 +1145,11 @@ video {
 .px-5 {
   padding-left: 1.25rem;
   padding-right: 1.25rem;
+}
+
+.px-10 {
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
 }
 
 .pl-2 {
@@ -1712,8 +1769,34 @@ video {
     display: none;
   }
 
+  .xl\:w-\[68rem\] {
+    width: 68rem;
+  }
+
+  .xl\:w-\[55rem\] {
+    width: 55rem;
+  }
+
+  .xl\:w-auto {
+    width: auto;
+  }
+
+  .xl\:max-w-\[61rem\] {
+    max-width: 61rem;
+  }
+
+  .xl\:px-0 {
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+
   .xl\:pl-10 {
     padding-left: 2.5rem;
+  }
+
+  .xl\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
   }
 }
 
